syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message StoreChunk {
    string fileName = 1;
    int32 chunkId = 2;
    bytes data = 3;
    string nodes = 4;
}

message StorageRequest {
    string filename = 1;
    map<string, int32> chunkSizes = 2;
    string clientNode = 3;
}

message StorageResponse {
    map<string, string> chunkStorage = 1;
}

message RetrieveFileRequest {
    string fileName = 1;
    string clientNode = 2;
}

message RetrieveFileResponse {
    map<string, string> retrieveChunk = 1;
}

message RetrieveFileRequestToSN {
    string fileName = 1;
    string clientNode = 2;
}

message RetrieveFile {
    string fileName = 1;
    bytes data = 2;
    bytes checksum = 3;
}

message ListFileRequest {
    string clientNode = 1;
}

message ListFileResponse {
    map<string,int32> storageSpace = 1;
    map<string,string> files = 2;
}

message ReplicateChunk {
    string fileName = 1;
    int32 chunkId = 2;
    bytes data = 3;
    string node = 4;
}

message SendHeartBeat{
    string nodename = 1;
    repeated string files = 2;
    int64 timestamp = 3;
    int32 availableSpace = 4;
}

message ReReplication{
    string node = 1;
    string filename = 2;
}

message StorageMessageWrapper {
    oneof msg {
        StoreChunk storeChunkMsg = 1;
        RetrieveFile retrieveFileMsg = 2;
        SendHeartBeat sendHeartBeatMsg = 3;
        StorageRequest storageRequest = 4;
        StorageResponse storageResponse = 5;
        RetrieveFileRequest retrieveFileRequest = 6;
        RetrieveFileResponse retriveFileResponse = 7;
        ReplicateChunk replicateChunk = 8;
        RetrieveFileRequestToSN retrieveFileRequestToSN = 9;
        ListFileRequest listFileRequest = 10;
        ListFileResponse listFileResponse = 11;
        ReReplication rereplication = 12;
    }
}